# CloudStorm

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  startdjango.sh
CloudStorm/: asgi.py  celery.py  handlers.py  paginator.py  settings.py  urls.py  utils.py  views.py  wsgi.py
CloudStorm/settings/: base.py  local.py  production.py
apps/files/: admin.py  filters.py  middleware.py  models.py  permissions.py  serializers.py  services.py  swagger_serializers.py  tasks.py  urls.py  utils.py  views.py
apps/files/migrations/: 0001_initial.py  0002_file_file_extension_file_file_size_alter_file_file_and_more.py  0002_initial.py  0003_alter_file_file.py  0003_initial.py  0004_alter_file_file_type.py  0004_file_status.py  0005_alter_file_name.py  0005_file_short_description_alter_file_group.py
apps/files/tests/: baker_recipes.py  conftest.py  test_permissions.py
apps/files/utils/: file_utils.py  (+2 more)
apps/groups/: admin.py  models.py  permissions.py  serializers.py  services.py  swagger_seriallizers.py  urls.py  views.py
apps/users/: authenticate.py  models.py  serializers.py  tasks.py  urls.py  views.py
cloudstorm-frontend/: vite.config.ts
fixtures/: fixtures.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
scripts/: startceleryworker.sh  startdjango.sh
tests/: conftest.py
tests/api/: test_group.py  test_user.py
tests/models/: test_group_models.py  test_user_models.py
(+45 files in other folders)
