[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudstorm"
version = "0.1.0"
description = "cloudstorm project."
authors = [
  { name="Konstantinos Damianos", email="kostas2372@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django~=4.2.18",
    "djangorestframework~=3.15.2",
    "PyJWT~=2.10.1",
    "fernet~=1.0.1",
    "django-taggit",
    "python-dotenv~=1.0.0",
    "django-storages~=1.14.3",
    "django-storage-url~=0.12.0",
    "azure-core~=1.30.2",
    "azure-storage-blob~=12.22.0",
    "djangorestframework-simplejwt",
    "psycopg2-binary",
    "drf-yasg",
    "django-filter",
    "openai",
    "SpeechRecognition",
    "pydub",
    "moviepy",
    "django-encrypted-model-fields",
    "celery==5.2.7",
    "django_celery_beat",
    "redis",
    "channels-redis",
    "django-debug-toolbar",
    "django-cors-headers"
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.4"
]

[tool.ruff]
exclude = ["CloudStorm/settings/"]